syntax = "proto3";
package pbfiles;
option go_package = ".;pbfiles";

message UserInfo{
    int32 user_id = 1;
    int32 user_score = 2;
};
